# bifurcationjax

./: .gitignore  README.md  pyproject.toml
bifurcationjax/: BifurcationProblem.py
bifurcationjax/continuation/: Continuation.py  Correction.py  Corrector.py  Prediction.py  Predictor.py  __init__.py
bifurcationjax/continuation/correction/: Correction.py
bifurcationjax/utils/: Branch.py  Krylov_Newton.py  __init__.py  branch_switching.py  plot.py
notebooks/: 1_newton_method.ipynb  2_continuation.ipynb  2_continuation_naive.ipynb  3_continuation.ipynb  3_test.py  4_bifurcation_points.ipynb  5_branch_switch.ipynb  6_bifurcation_tfg.ipynb  continuation.py  test.ipynb  test_time.ipynb
tests/: 1_test_secant_natural.py  2_test_secant_palc.py  3_test_tangent_palc.py  4_test_natural_palc.py  5_test_branch_switch.py  6_test_branch_switch.py  7_test_tfg copy.py  7_test_tfg.py  example1.py  example2.py  example3.py  example4.py  test1.py  test_branch_switch.py  test_branch_switching.py  test_correctors.py  test_infinite_dimensional.py  test_infinite_dimensional_branch.py  test_predictors.py
